cabal-version:      >= 1.6
build-type:         Simple
name:               nsis
version:            0.1.2
-- license is GPL v2 only
license:            GPL
license-file:       LICENSE
category:           Development
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2012
synopsis:           DSL for producing Windows Installer using NSIS.
description:
    NSIS (Nullsoft Scriptable Install System, <http://nsis.sourceforge.net/>) is a tool that allows programmers
    to create installers for Windows.
    This library provides an alternative syntax for NSIS scripts, as an embedded Haskell language, removing much
    of the hard work in developing an install script. Simple NSIS installers should look mostly the same, complex ones should
    be significantly more maintainable.
homepage:           http://community.haskell.org/~ndm/nsis/
stability:          Beta

source-repository head
    type:     darcs
    location: http://community.haskell.org/~ndm/darcs/nsis/

library
    build-depends:
        base == 4.*,
        transformers >= 0.2 && < 0.4,
        uniplate >= 1.5 && < 1.7

    exposed-modules:
        Development.NSIS
    other-modules:
        Development.NSIS.Library
        Development.NSIS.Optimise
        Development.NSIS.Show
        Development.NSIS.Sugar
        Development.NSIS.Type

flag testprog
    default: False
    description: Build the test program


executable nsis
    main-is: Main.hs
    if flag(testprog)
        buildable: True
    else
        buildable: False
    build-depends:
        process

    other-modules:
        Examples.Example1
        Examples.Example2
        Examples.Primes
