cabal-version:      >= 1.10
build-type:         Simple
name:               nsis
version:            0.2.3
license:            BSD3
license-file:       LICENSE
category:           Development
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2012-2013
synopsis:           DSL for producing Windows Installer using NSIS.
description:
    NSIS (Nullsoft Scriptable Install System, <http://nsis.sourceforge.net/>) is a tool that allows programmers
    to create installers for Windows.
    This library provides an alternative syntax for NSIS scripts, as an embedded Haskell language, removing much
    of the hard work in developing an install script. Simple NSIS installers should look mostly the same, complex ones should
    be significantly more maintainable.
homepage:           http://community.haskell.org/~ndm/nsis/
stability:          Beta

source-repository head
    type:     git
    location: https://github.com/ndmitchell/nsis.git

library
    default-language: Haskell2010
    build-depends:
        base == 4.*,
        transformers >= 0.2 && < 0.4,
        uniplate >= 1.5 && < 1.7

    exposed-modules:
        Development.NSIS
        Development.NSIS.Plugins.Base64
        Development.NSIS.Plugins.Taskbar
    other-modules:
        Development.NSIS.Library
        Development.NSIS.Optimise
        Development.NSIS.Show
        Development.NSIS.Sugar
        Development.NSIS.Type

test-suite shake-test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        base == 4.*,
        transformers >= 0.2 && < 0.4,
        uniplate >= 1.5 && < 1.7,
        process

    other-modules:
        Examples.Base64
        Examples.Example1
        Examples.Example2
        Examples.Primes
        Examples.Taskbar
