cabal-version:      >= 1.18
build-type:         Simple
name:               nsis
version:            0.3.2
license:            BSD3
license-file:       LICENSE
category:           Development
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2012-2017
synopsis:           DSL for producing Windows Installer using NSIS.
tested-with:        GHC==8.2.1, GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3
description:
    NSIS (Nullsoft Scriptable Install System, <http://nsis.sourceforge.net/>) is a tool that allows programmers
    to create installers for Windows.
    This library provides an alternative syntax for NSIS scripts, as an embedded Haskell language, removing much
    of the hard work in developing an install script. Simple NSIS installers should look mostly the same, complex ones should
    be significantly more maintainable.
homepage:           https://github.com/ndmitchell/nsis#readme
bug-reports:        https://github.com/ndmitchell/nsis/issues

extra-doc-files:
    CHANGES.txt
    README.md

source-repository head
    type:     git
    location: https://github.com/ndmitchell/nsis.git

library
    default-language: Haskell2010
    hs-source-dirs: src
    build-depends:
        base == 4.*,
        transformers >= 0.2,
        uniplate >= 1.5

    if impl(ghc < 8.0)
        build-depends: semigroups >= 0.18

    exposed-modules:
        Development.NSIS
        Development.NSIS.Plugins.Base64
        Development.NSIS.Plugins.EnvVarUpdate
        Development.NSIS.Plugins.Taskbar
        Development.NSIS.Plugins.Sections
        Development.NSIS.Plugins.WinMessages
    other-modules:
        Development.NSIS.Library
        Development.NSIS.Optimise
        Development.NSIS.Show
        Development.NSIS.Sugar
        Development.NSIS.Type

test-suite nsis-test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    build-depends:
        base == 4.*,
        nsis,
        transformers >= 0.2,
        uniplate >= 1.5,
        directory,
        process

    other-modules:
        Examples.Base64
        Examples.EnvVarUpdate
        Examples.Example1
        Examples.Example2
        Examples.Finish
        Examples.Primes
        Examples.Radio
        Examples.Taskbar
        Examples.WinMessages
